--- a/genergy-eam-admin/src/main/resources/application.yml
+++ b/genergy-eam-admin/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: genergy-eam-admin
   profiles:
-    active: dev
+    active: ecs
 
 logging:
   level:
@@ -20,7 +20,10 @@ mybatis-plus:
   configuration:
     default-enum-type-handler: com.baomidou.mybatisplus.extension.handlers.MybatisEnumTypeHandler
 
-upload-path: "./uploads/"
+upload-path:
+  files: "D:/uploads/files/"
+  imgs: "D:/uploads/imgs/"
+  temp: "D:/uploads/temp/"
 
 ---
 spring:
@@ -32,6 +35,26 @@ spring:
     url: jdbc:mysql://172.18.10.78:3306/genergy_eam?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
     username: root
     password: 6x@test2018
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+
+devtools:
+  restart:
+    enabled: true
+    additional-paths: src/main/java
+
+---
+spring:
+  profiles: ecs
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    name: genergy_eam
+    url: jdbc:mysql://47.96.11.15:3306/genergy_eam?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
+    username: root
+    password: Cjp_1990
   servlet:
     multipart:
       max-file-size: 10MB
