--- a/genergy-eam-admin/pom.xml
+++ b/genergy-eam-admin/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.7</version>
+        </dependency>
     </dependencies>
 
     <build>
