--- a/genergy-eam-database/pom.xml
+++ b/genergy-eam-database/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.30</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.7</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
